--- a/Tecnologias para a Web e Ambientes Móveis/FirstWebsite/about.html
+++ b/Tecnologias para a Web e Ambientes Móveis/FirstWebsite/about.html
@@ -4,6 +4,20 @@
 	<title> Snack-Bar Restaurante A Merenda </title>
 </head>
 <body>
+	<div class="container">
+		<div id="branding">
+			<h1>
+				A Merenda
+			</h1>
+			<nav>
+				<ul>
+					<li><a href="homepage.html">Home</a></li>
+					<li><a href="about.html">Sobre</a></li>	
+					<li><a href="contacts.html">Contactos</a></li>		
+				</ul>
+			</nav>
+		</div>
+	</div>
 	<h1>Sobre nós</h1>
 	<h2>Somos uma equipa muito diversificada, focada no melhor atendimendo para com os nossos clientes e servir comida sempre quente com objetivo a imitar a comida caseira.</h2>
 </body>
