--- a/Tecnologias para a Web e Ambientes Móveis/FirstWebsite/contacts.html
+++ b/Tecnologias para a Web e Ambientes Móveis/FirstWebsite/contacts.html
@@ -4,6 +4,20 @@
 	<title> Snack-Bar Restaurante A Merenda </title>
 </head>
 	<body>
+		<div class="container">
+		<div id="branding">
+			<h1>
+				A Merenda
+			</h1>
+			<nav>
+				<ul>
+					<li><a href="homepage.html">Home</a></li>
+					<li><a href="about.html">Sobre</a></li>	
+					<li><a href="contacts.html">Contactos</a></li>		
+				</ul>
+			</nav>
+		</div>
+	</div>
 	<h1>A Merenda</h1>
 	<h2>Número de Telefone: 926 744 868</h2>
 	<h2>Morada: Largo D.Nuno Alvares Pereira</h2>
